--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  <nav class="zone green">
+  <nav class="zone blue sticky">
     <ul class="main-nav">
       <li><a href="#">Home</a></li>
       <li><a href="#">Product</a></li>
@@ -13,33 +13,35 @@
       <li class="push"><a href="#">Contacts</a></li>
     </ul>
   </nav>
-  <div class="cover zone red">Cover</div>
-  <div class="grid zone blue">
-    <div class="grid-item">
-      <img src="img/1_files.png" alt="">
+  <div class="container zone">
+    <img class="cover" src="./img/undraw.png" alt="">
+  </div>
+  <div class="grid-wrapper zone blue">
+    <div class="grid-item zone box">
+      <img src="./img/1_files.png" alt="">
     </div>
-    <div class="grid-item">
-      <img src="img/2_server.png" alt="">
+    <div class="grid-item zone box">
+      <img src="./img/2_server.png" alt="">
     </div>
-    <div class="grid-item">
-      <img src="img/3_monitor_settings.png" alt="">
+    <div class="grid-item zone box">
+      <img src="./img/3_monitor_settings.png" alt="">
     </div>
-    <div class="grid-item">
-      <img src="img/4_server.png" alt="">
+    <div class="grid-item zone box">
+      <img src="./img/4_server.png" alt="">
     </div>
-    <div class="grid-item">
-      <img src="img/5_data_storage.png" alt="">
+    <div class="grid-item zone box">
+      <img src="./img/5_data_storage.png" alt="">
     </div>
-    <div class="grid-item">
-      <img src="img/6_monitor_coding.png" alt="">
+    <div class="grid-item zone box">
+      <img src="./img/6_monitor_coding.png" alt="">
     </div>
-    <div class="grid-item">
-      <img src="img/7_desktop_analytics.png" alt="">
+    <div class="grid-item zone box">
+      <img src="./img/7_desktop_analytics.png" alt="">
     </div>
-    <div class="grid-item">
-      <img src="img/8_server_safe.png" alt="">
+    <div class="grid-item zone box">
+      <img src="./img/8_server_safe.png" alt="">
     </div>
   </div>
-  <div class="footer zone yellow">Footer</div>
+  <footer class="footer zone yellow">Footer</footer>
 </body>
 </html>
